[gd_scene load_steps=15 format=3 uid="uid://bjxsl3k7lv5ln"]

[ext_resource type="Script" path="res://scripts/WorldScripts/world_4.gd" id="1_k1d63"]
[ext_resource type="TileSet" uid="uid://caqgtfl7smp0e" path="res://scenes/Worlds/platform.tres" id="2_njmmv"]
[ext_resource type="TileSet" uid="uid://dbcekwogp6tu4" path="res://Tilseset1.tres" id="3_hwwgd"]
[ext_resource type="PackedScene" uid="uid://fbvrsjqpv48e" path="res://scenes/Player.tscn" id="4_lltga"]
[ext_resource type="PackedScene" uid="uid://b6jc6rqa5yav7" path="res://scenes/ackapa.tscn" id="5_fsfd7"]
[ext_resource type="PackedScene" uid="uid://ck1qqt2h66flu" path="res://scenes/a_iworld.tscn" id="5_rsnor"]
[ext_resource type="PackedScene" uid="uid://dbbsw3u3qfvod" path="res://scenes/door.tscn" id="7_yfd5y"]
[ext_resource type="PackedScene" uid="uid://bvv1ii68l5xih" path="res://scenes/door_button.tscn" id="8_i33ci"]
[ext_resource type="PackedScene" uid="uid://bl1i20vwjfqms" path="res://NPCs/MiniBoss1.tscn" id="9_2sa5f"]
[ext_resource type="Environment" uid="uid://wkxkytfd75u2" path="res://scenes/Worlds/glow.tres" id="10_5n8kt"]
[ext_resource type="PackedScene" uid="uid://0ufd07f2xa57" path="res://scenes/floresan.tscn" id="10_x7duh"]
[ext_resource type="Shader" uid="uid://s7s30mt8g442" path="res://scenes/Player.tres" id="10_ymref"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qejr7"]
size = Vector2(20, 92)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h48n4"]
resource_local_to_scene = true
shader = ExtResource("10_ymref")
shader_parameter/enabled = false
shader_parameter/tint = Color(0.996945, 6e-06, 2e-06, 1)

[node name="World4" type="Node2D"]
script = ExtResource("1_k1d63")

[node name="TileMap2" type="TileMap" parent="."]
z_index = 3
texture_filter = 1
tile_set = ExtResource("2_njmmv")
format = 2

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
texture_filter = 1
tile_set = ExtResource("3_hwwgd")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 2, 65536, 0, 3, 131072, 0, 3, 196608, 0, 3, 262144, 0, 3, 327680, 0, 3, 393216, 0, 3, 458752, 0, 3, 524288, 196608, 3, 589824, 65536, 3, 655360, 65536, 4, 720896, 0, 1, 786432, 0, 1, 851968, 0, 1, 917504, 65536, 2, 983040, 0, 3, 1048576, 0, 4, 1, 65536, 2, 65537, 65536, 3, 131073, 65536, 3, 196609, 65536, 3, 262145, 65536, 3, 327681, 65536, 3, 393217, 65536, 3, 458753, 65536, 3, 524289, 65536, 3, 589825, 65536, 3, 655361, 65536, 4, 720897, 0, 1, 786433, 0, 1, 851969, 0, 1, 917505, 65536, 2, 983041, 65536, 3, 1048577, 65536, 4, 2, 65536, 2, 65538, 65536, 3, 131074, 262144, 4, 196610, 131072, 3, 262146, 131072, 3, 327682, 131072, 3, 393218, 131072, 3, 458754, 131072, 3, 524290, 131072, 3, 589826, 131072, 3, 655362, 131072, 4, 720898, 0, 1, 786434, 0, 1, 851970, 0, 1, 917506, 65536, 2, 983042, 65536, 3, 1048578, 65536, 4, 3, 65536, 2, 65539, 65536, 3, 131075, 65536, 4, 196611, 0, 1, 262147, 0, 1, 327683, 0, 1, 393219, 0, 1, 458755, 0, 1, 524291, 0, 1, 786435, 0, 1, 851971, 0, 1, 917507, 65536, 2, 983043, 65536, 3, 1048579, 65536, 4, 4, 65536, 2, 65540, 65536, 3, 131076, 65536, 4, 196612, 0, 1, 262148, 0, 1, 327684, 0, 1, 393220, 0, 1, 458756, 0, 1, 524292, 0, 1, 720900, 0, 1, 786436, 0, 1, 851972, 0, 1, 917508, 65536, 2, 983044, 65536, 3, 1048580, 65536, 4, 5, 65536, 2, 65541, 65536, 3, 131077, 65536, 4, 196613, 0, 1, 262149, 0, 1, 327685, 0, 1, 393221, 0, 1, 458757, 0, 1, 524293, 0, 1, 917509, 65536, 2, 983045, 65536, 3, 1048581, 65536, 4, 6, 65536, 2, 65542, 65536, 3, 131078, 65536, 4, 196614, 0, 1, 262150, 0, 1, 327686, 0, 1, 393222, 0, 1, 458758, 0, 1, 524294, 0, 1, 655366, 0, 1, 917510, 65536, 2, 983046, 65536, 3, 1048582, 65536, 4, 7, 65536, 2, 65543, 65536, 3, 131079, 65536, 4, 196615, 0, 1, 262151, 0, 1, 327687, 0, 1, 393223, 0, 1, 458759, 0, 1, 524295, 0, 1, 655367, 0, 1, 720903, 0, 1, 786439, 0, 1, 851975, 0, 1, 917511, 65536, 2, 983047, 65536, 3, 1048583, 65536, 4, 8, 65536, 2, 65544, 65536, 3, 131080, 65536, 4, 196616, 0, 1, 262152, 0, 1, 327688, 0, 1, 393224, 0, 1, 458760, 0, 1, 786440, 0, 1, 851976, 0, 1, 917512, 65536, 2, 983048, 65536, 3, 1048584, 65536, 4, 9, 65536, 2, 65545, 65536, 3, 131081, 65536, 4, 196617, 0, 1, 262153, 0, 1, 327689, 0, 1, 393225, 0, 1, 786441, 0, 1, 851977, 0, 1, 917513, 65536, 2, 983049, 65536, 3, 1048585, 65536, 4, 10, 65536, 2, 65546, 65536, 3, 131082, 65536, 4, 196618, 0, 1, 262154, 0, 1, 327690, 0, 1, 393226, 0, 1, 786442, 0, 1, 851978, 0, 1, 917514, 65536, 2, 983050, 65536, 3, 1048586, 65536, 4, 11, 65536, 2, 65547, 65536, 3, 131083, 65536, 4, 196619, 0, 1, 262155, 0, 1, 327691, 0, 1, 393227, 0, 1, 786443, 0, 1, 851979, 0, 1, 917515, 65536, 2, 983051, 65536, 3, 1048587, 65536, 4, 12, 65536, 2, 65548, 65536, 3, 131084, 65536, 4, 196620, 0, 1, 262156, 0, 1, 327692, 0, 1, 393228, 0, 1, 458764, 0, 1, 786444, 0, 1, 851980, 0, 1, 917516, 65536, 2, 983052, 65536, 3, 1048588, 65536, 4, 13, 65536, 2, 65549, 65536, 3, 131085, 65536, 4, 196621, 0, 1, 262157, 0, 1, 327693, 0, 1, 393229, 0, 1, 458765, 0, 1, 786445, 0, 1, 851981, 0, 1, 917517, 65536, 2, 983053, 65536, 3, 1048589, 65536, 4, 14, 65536, 2, 65550, 65536, 3, 131086, 65536, 4, 196622, 0, 1, 262158, 0, 1, 327694, 0, 1, 458766, 0, 1, 786446, 0, 1, 851982, 0, 1, 917518, 65536, 2, 983054, 65536, 3, 1048590, 65536, 4, 15, 65536, 2, 65551, 65536, 3, 131087, 65536, 4, 196623, 0, 1, 262159, 0, 1, 327695, 0, 1, 458767, 0, 1, 786447, 0, 1, 851983, 0, 1, 917519, 65536, 2, 983055, 65536, 3, 1048591, 65536, 4, 16, 65536, 2, 65552, 65536, 3, 131088, 65536, 4, 196624, 0, 1, 262160, 0, 1, 327696, 0, 1, 458768, 0, 1, 786448, 0, 1, 851984, 0, 1, 917520, 65536, 2, 983056, 65536, 3, 1048592, 65536, 4, 17, 65536, 2, 65553, 65536, 3, 131089, 65536, 4, 196625, 0, 1, 262161, 0, 1, 327697, 0, 1, 458769, 0, 1, 786449, 0, 1, 851985, 0, 1, 917521, 65536, 2, 983057, 65536, 3, 1048593, 65536, 4, 18, 65536, 2, 65554, 65536, 3, 131090, 65536, 4, 196626, 0, 1, 262162, 0, 1, 327698, 0, 1, 786450, 0, 1, 851986, 0, 1, 917522, 65536, 2, 983058, 65536, 3, 1048594, 65536, 4, 19, 65536, 2, 65555, 65536, 3, 131091, 65536, 4, 196627, 0, 1, 262163, 0, 1, 327699, 0, 1, 786451, 0, 1, 851987, 0, 1, 917523, 65536, 2, 983059, 65536, 3, 1048595, 65536, 4, 20, 65536, 2, 65556, 65536, 3, 131092, 65536, 4, 196628, 0, 1, 262164, 0, 1, 327700, 0, 1, 393236, 0, 1, 458772, 0, 1, 786452, 0, 1, 851988, 0, 1, 917524, 65536, 2, 983060, 65536, 3, 1048596, 65536, 4, 21, 65536, 2, 65557, 65536, 3, 131093, 65536, 4, 196629, 0, 1, 262165, 0, 1, 327701, 0, 1, 786453, 0, 1, 851989, 0, 1, 917525, 65536, 2, 983061, 65536, 3, 1048597, 65536, 4, 22, 65536, 2, 65558, 65536, 3, 131094, 65536, 4, 196630, 0, 1, 262166, 0, 1, 327702, 0, 1, 720918, 0, 1, 786454, 0, 1, 851990, 0, 1, 917526, 65536, 2, 983062, 65536, 3, 1048598, 65536, 4, 23, 65536, 2, 65559, 65536, 3, 131095, 65536, 4, 196631, 0, 1, 262167, 0, 1, 327703, 0, 1, 393239, 0, 1, 458775, 0, 1, 786455, 0, 1, 851991, 0, 1, 917527, 65536, 2, 983063, 65536, 3, 1048599, 65536, 4, 24, 65536, 2, 65560, 65536, 3, 131096, 65536, 4, 196632, 0, 1, 262168, 0, 1, 327704, 0, 1, 393240, 0, 1, 458776, 0, 1, 786456, 0, 1, 851992, 0, 1, 917528, 65536, 2, 983064, 65536, 3, 1048600, 65536, 4, 25, 65536, 2, 65561, 65536, 3, 131097, 65536, 4, 196633, 0, 1, 262169, 0, 1, 327705, 0, 1, 393241, 0, 1, 458777, 0, 1, 786457, 0, 1, 851993, 0, 1, 917529, 65536, 2, 983065, 65536, 3, 1048601, 65536, 4, 26, 65536, 2, 65562, 65536, 3, 131098, 65536, 4, 196634, 0, 1, 262170, 0, 1, 327706, 0, 1, 393242, 0, 1, 458778, 0, 1, 786458, 0, 1, 851994, 0, 1, 917530, 65536, 2, 983066, 65536, 3, 1048602, 65536, 4, 27, 65536, 2, 65563, 65536, 3, 131099, 196608, 4, 196635, 0, 3, 262171, 0, 3, 327707, 0, 3, 393243, 0, 3, 458779, 0, 3, 524315, 0, 3, 589851, 0, 3, 655387, 0, 4, 720923, 0, 1, 786459, 0, 1, 851995, 0, 1, 917531, 65536, 2, 983067, 65536, 3, 1048603, 65536, 4, 28, 65536, 2, 65564, 65536, 3, 131100, 65536, 3, 196636, 65536, 3, 262172, 65536, 3, 327708, 65536, 3, 393244, 65536, 3, 458780, 65536, 3, 524316, 65536, 3, 589852, 65536, 3, 655388, 65536, 4, 720924, 0, 1, 786460, 0, 1, 851996, 0, 1, 917532, 65536, 2, 983068, 65536, 3, 1048604, 65536, 4, 29, 131072, 2, 65565, 131072, 3, 131101, 131072, 3, 196637, 131072, 3, 262173, 131072, 3, 327709, 131072, 3, 393245, 131072, 3, 458781, 131072, 3, 524317, 131072, 3, 589853, 131072, 3, 655389, 65536, 4, 720925, 0, 1, 786461, 0, 1, 851997, 0, 1, 917533, 65536, 2, 983069, 131072, 3, 1048605, 131072, 4, 983039, 0, 4, 917503, 131072, 3, 851967, 131072, 3, 786431, 131072, 3, 720895, 0, 3, 655359, 0, 3, 589823, 0, 2, 589830, 0, 1, 589831, 0, 1, 655391, 65536, 4, 655390, 65536, 4, 917536, 131072, 4, 852000, 131072, 3, 786464, 131072, 3, 720928, 131072, 3, 655392, 131072, 2, 917535, 65536, 4, 917534, 65536, 4, 589827, 0, 1, 655363, 0, 1, 720899, 0, 1, 589828, 0, 1, 655364, 0, 1, 589829, 0, 1, 655365, 0, 1, 524296, 0, 1, 589832, 0, 1, 655368, 0, 1, 720904, 0, 1, 655369, 0, 1, 720905, 0, 1, 655370, 0, 1, 720906, 0, 1, 655371, 0, 1, 720907, 0, 1, 524300, 0, 1, 589836, 0, 1, 655372, 0, 1, 720908, 0, 1, 524301, 0, 1, 589837, 0, 1, 655373, 0, 1, 720909, 0, 1, 524302, 0, 1, 589838, 0, 1, 720910, 0, 1, 524303, 0, 1, 589839, 0, 1, 720911, 0, 1, 524304, 0, 1, 589840, 0, 1, 720912, 0, 1, 524305, 0, 1, 589841, 0, 1, 720913, 0, 1, 720914, 0, 1, 720915, 0, 1, 524308, 0, 1, 589844, 0, 1, 655380, 0, 1, 720916, 0, 1, 720917, 0, 1, 524311, 0, 1, 589847, 0, 1, 655383, 0, 1, 720919, 0, 1, 524312, 0, 1, 589848, 0, 1, 655384, 0, 1, 720920, 0, 1, 524313, 0, 1, 589849, 0, 1, 655385, 0, 1, 720921, 0, 1, 524314, 0, 1, 589850, 0, 1, 655386, 0, 1, 720922, 0, 1, 458761, 0, 1, 524297, 0, 1, 589833, 0, 1, 458762, 0, 1, 458763, 0, 1, 720901, 0, 1, 786437, 0, 1, 851973, 0, 1, 720902, 0, 1, 786438, 0, 1, 851974, 0, 1, 524298, 0, 1, 589834, 0, 1, 524299, 0, 1, 589835, 0, 1, 458773, 0, 1, 524309, 0, 1, 589845, 0, 1, 458770, 0, 1, 524306, 0, 1, 589842, 0, 1, 458771, 0, 1, 524307, 0, 1, 589843, 0, 1, 393237, 0, 1, 393238, 0, 1, 458774, 0, 1, 524310, 0, 1, 589846, 0, 1, 655382, 0, 1, 655381, 0, 1, 393230, 0, 1, 655374, 0, 1, 393231, 0, 1, 655375, 0, 1, 393232, 0, 1, 655376, 0, 1, 393233, 0, 1, 655377, 0, 1, 393234, 0, 1, 655378, 0, 1, 393235, 0, 1, 655379, 0, 1)

[node name="Player" parent="." instance=ExtResource("4_lltga")]
position = Vector2(22, 212)
collision_layer = 3
collision_mask = 3

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-29, 105)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(546, 90)
shape = SubResource("RectangleShape2D_qejr7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="AIworld" parent="CanvasLayer" instance=ExtResource("5_rsnor")]

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
offset_left = -46.0
offset_right = 563.0
offset_bottom = 291.0
color = Color(0, 0, 0, 0.588235)
metadata/_edit_use_anchors_ = true

[node name="ackapa" parent="CanvasLayer" instance=ExtResource("5_fsfd7")]

[node name="Door" parent="." instance=ExtResource("7_yfd5y")]
position = Vector2(465, 224)

[node name="Doorbutton" parent="." instance=ExtResource("8_i33ci")]
position = Vector2(416, 147)

[node name="MiniBoss1" parent="." instance=ExtResource("9_2sa5f")]
material = SubResource("ShaderMaterial_h48n4")
position = Vector2(431, 201)

[node name="Floresan" parent="." instance=ExtResource("10_x7duh")]
position = Vector2(240, 51)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("10_5n8kt")

[connection signal="deadsignal" from="Player" to="." method="_on_player_deadsignal" flags=18]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered" flags=18]
[connection signal="area_entered" from="Doorbutton" to="." method="_on_doorbutton_area_entered"]
